--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# I added this
+bin
+bin/
+obj
+obj/
+
 # User-specific files
 *.rsuser
 *.suo
