--- a/ConsoleClient/ConsoleClient.csproj
+++ b/ConsoleClient/ConsoleClient.csproj
@@ -18,7 +18,7 @@
     <Nullable>enable</Nullable>
 
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>bird</ToolCommandName>
+    <ToolCommandName>bw</ToolCommandName>
     <Version>1.0.0</Version>
   </PropertyGroup>
 
